# sponsormanager

./: .default.env  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.default.yml  docker-compose.yml
backend/: Cargo.toml
backend/src/: auth.rs  error.rs  main.rs  meili_sync.rs  misc.rs
backend/src/models/: meili.rs  mod.rs  mongo.rs  rest.rs
backend/src/queries/: meili.rs  mod.rs  mongo.rs
backend/src/routes/: changes.rs  create.rs  create_sponsor.rs  delete.rs  get.rs  get_all.rs  get_logo.rs  healthcheck.rs  login.rs  login_code.rs  mod.rs  search.rs  update.rs  update_logo.rs  upload_logo.rs  whoami.rs
backend/src/routes/settings/: get.rs  get_admins.rs  mod.rs  update.rs  update_admins.rs
frontend/: app.config.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/components/: EditableInputField.vue  SponsorFavours.vue  SponsorImage.vue  SponsorOverview.vue  SponsorOverviewGrid.vue  SponsorOverviewList.vue  SponsorTags.vue  VariableInputs.vue
frontend/layouts/: custom.vue  default.vue
frontend/layouts/components/: Footer.vue
frontend/layouts/components/navbar/: Navbar.vue  NavbarAdd.vue  NavbarFavours.vue  NavbarHistory.vue  NavbarSearch.vue  NavbarSettings.vue  NavbarUser.vue
frontend/middleware/: navguard.global.ts
frontend/pages/: favours.vue  history.vue  index.vue  login.vue  seasonSelect._vue  seasonSelect.vue  settings.vue
frontend/pages/search/: [term].vue
frontend/pages/sponsor/: [id].vue
frontend/stores/: auth.ts  main.ts
frontend/utils/: http.ts  misc.ts  recipe_upload.ts  search.ts  settings.ts  sponsor.ts
