[package]
name = "sponsormanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.6.16", features = ["json", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"
mongodb = { version = "2.5", features = ["bson-uuid-1"] }
meilisearch-sdk = "0.23"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tokio-util = { version = "0.7", features = ["compat"] }
infer = "0.13"
ldap3 = { version = "0.11", default-features = false, features = ["tls"] }
jsonwebtoken = "8.3"
